--- a/package.json
+++ b/package.json
@@ -6,25 +6,28 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
+    "build:single": "cross-env BUILD_MODE=single vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react-datepicker": "^4.15.0",
     "date-fns": "^2.30.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
-    "@types/react-datepicker": "^4.15.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^10.0.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-singlefile": "^0.13.5",
     "workbox-window": "^7.0.0"
   }
 }
